deploy/k8s/base/foundation/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gochat
spec:
  gatewayClassName: gochat-traefik
  listeners:
    - name: http
      port: 8000
      protocol: HTTP
      hostname: gochat.localhost
      allowedRoutes:
        namespaces:
          from: Same
